# DotNetSerializer-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README  README.md  conanfile.txt
cmake/: Conan.cmake
scripts/: fetch_glslangvalidator.py
src/: ArrayReader.cpp  ArrayReader.h  ArrayType.h  Binary.Serializer.cpp  Binary.Serializer.vcproj  Binary.Serializer.vcxproj  Binary.Serializer.vcxproj.filters  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  DataType.h  DotNetAssembly.cpp  DotNetAssembly.h  DotNetClass.cpp  DotNetClass.h  DotNetField.cpp  DotNetField.h  DotNetFileReader.cpp  DotNetFileReader.h  MemberReferenceField.h  SchemaDataType.h  SchemaType.h  UpgradeLog.XML  UserClassField.cpp  UserClassField.h  stdafx.cpp  stdafx.h  tools.cpp  tools.h
src/dnscpp/dotnet/: CMakeLists.txt  DotNetAssembly.cpp  DotNetAssembly.h  DotNetClass.cpp  DotNetClass.h  DotNetField.cpp  DotNetField.h  DotNetFileReader.cpp  DotNetFileReader.h  DotNetPrimitiveTypeField.cpp  DotNetPrimitiveTypeField.h  FindDotNetAssembly.cpp  FindDotNetAssembly.h  FindDotNetClass.cpp  FindDotNetClass.h  MemberReferenceField.cpp  MemberReferenceField.h  UserClassField.cpp  UserClassField.h
src/dnscpp/dotnet/serialization/: Array.cpp  Array.h  ArrayFiller8b.cpp  ArrayFiller8b.h  ArrayItem.cpp  ArrayItem.h  ArrayOfObject.cpp  ArrayOfObject.h  ArrayOfPrimitive.cpp  ArrayOfPrimitive.h  ArrayOfString.cpp  ArrayOfString.h  Assembly.cpp  Assembly.h  CMakeLists.txt  Class.cpp  Class.h  Common.cpp  Common.h  End.cpp  End.h  Field.cpp  Field.h  MemberReference.cpp  MemberReference.h  Primitive.cpp  Primitive.h
(+16 files in other folders)
